refactoring: replace pairs.get(0) with pairs.getFirst() in PeopleTest.java for clarity <eom>